update spring boot version and security configurations
update spring boot version and security configurations